{
  "version": 4,
  "terraform_version": "1.9.6",
  "serial": 192,
  "lineage": "aeec487b-6fc3-35ad-842f-72e5aa5dacdc",
  "resources": [
    {
      "module": "module.deployment.module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:970354271578:internet-gateway/igw-0ff3b45067cecab52",
            "id": "igw-0ff3b45067cecab52",
            "owner_id": "970354271578",
            "tags_all": {
              "Environment": "uat",
              "Name": "my-fastapi-app",
              "Project": "my-fastapi-app"
            },
            "vpc_id": "vpc-0c78183b9364a1481"
          },
          "dependencies": [
            "module.deployment.module.network.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.deployment.module.network",
      "mode": "managed",
      "type": "aws_lb",
      "name": "my-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:970354271578:loadbalancer/app/my-fastapi-app-uat-lb/37d0f42c432acdeb",
            "arn_suffix": "app/my-fastapi-app-uat-lb/37d0f42c432acdeb",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "my-fastapi-app-uat-lb-671964778.eu-north-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-north-1:970354271578:loadbalancer/app/my-fastapi-app-uat-lb/37d0f42c432acdeb",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "my-fastapi-app-uat-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-04dc15163b242720c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-097f32e57d5067446"
              },
              {
                "subnet_id": "subnet-0d27da94455d99e0b"
              }
            ],
            "subnets": [
              "subnet-097f32e57d5067446",
              "subnet-0d27da94455d99e0b"
            ],
            "tags_all": {
              "Environment": "uat",
              "Name": "my-fastapi-app",
              "Project": "my-fastapi-app"
            },
            "vpc_id": "vpc-0c78183b9364a1481",
            "xff_header_processing_mode": "append",
            "zone_id": "Z23TAZ6LKFMNIO"
          },
          "dependencies": [
            "module.deployment.module.network.aws_security_group.alb",
            "module.deployment.module.network.aws_subnet.my-subnets",
            "module.deployment.module.network.aws_vpc.my-vpc",
            "module.deployment.module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.deployment.module.network",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "my-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:970354271578:listener/app/my-fastapi-app-uat-lb/37d0f42c432acdeb/4bea9573c0657330",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-north-1:970354271578:targetgroup/my-fastapi-app-uat-lb-target/172e1ce34b8482e7",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:970354271578:listener/app/my-fastapi-app-uat-lb/37d0f42c432acdeb/4bea9573c0657330",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-north-1:970354271578:loadbalancer/app/my-fastapi-app-uat-lb/37d0f42c432acdeb",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "Environment": "uat",
              "Name": "my-fastapi-app",
              "Project": "my-fastapi-app"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.deployment.module.network.aws_lb.my-alb",
            "module.deployment.module.network.aws_lb_target_group.service_target_group",
            "module.deployment.module.network.aws_security_group.alb",
            "module.deployment.module.network.aws_subnet.my-subnets",
            "module.deployment.module.network.aws_vpc.my-vpc",
            "module.deployment.module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.deployment.module.network",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "service_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-north-1:970354271578:targetgroup/my-fastapi-app-uat-lb-target/172e1ce34b8482e7",
            "arn_suffix": "targetgroup/my-fastapi-app-uat-lb-target/172e1ce34b8482e7",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-north-1:970354271578:targetgroup/my-fastapi-app-uat-lb-target/172e1ce34b8482e7",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "my-fastapi-app-uat-lb-target",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Environment": "uat",
              "Name": "my-fastapi-app",
              "Project": "my-fastapi-app"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0c78183b9364a1481"
          },
          "dependencies": [
            "module.deployment.module.network.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.deployment.module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:970354271578:route-table/rtb-0b2e03721aab4fde2",
            "id": "rtb-0b2e03721aab4fde2",
            "owner_id": "970354271578",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ff3b45067cecab52",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Environment": "uat",
              "Name": "public-route-table",
              "Project": "my-fastapi-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c78183b9364a1481"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.deployment.module.network.aws_internet_gateway.my-igw",
            "module.deployment.module.network.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.deployment.module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnets-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cf0a2063c4c5f7b3",
            "route_table_id": "rtb-0b2e03721aab4fde2",
            "subnet_id": "subnet-097f32e57d5067446"
          },
          "dependencies": [
            "module.deployment.module.network.aws_internet_gateway.my-igw",
            "module.deployment.module.network.aws_route_table.route_table",
            "module.deployment.module.network.aws_subnet.my-subnets",
            "module.deployment.module.network.aws_vpc.my-vpc",
            "module.deployment.module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a5ec325d58a54cb4",
            "route_table_id": "rtb-0b2e03721aab4fde2",
            "subnet_id": "subnet-0d27da94455d99e0b"
          },
          "dependencies": [
            "module.deployment.module.network.aws_internet_gateway.my-igw",
            "module.deployment.module.network.aws_route_table.route_table",
            "module.deployment.module.network.aws_subnet.my-subnets",
            "module.deployment.module.network.aws_vpc.my-vpc",
            "module.deployment.module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.deployment.module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:970354271578:security-group/sg-04dc15163b242720c",
            "description": "Controls access to the ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04dc15163b242720c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "my-fastapi-app-uat-lb-security-group",
            "name_prefix": "",
            "owner_id": "970354271578",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "Environment": "uat",
              "Name": "my-fastapi-app",
              "Project": "my-fastapi-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c78183b9364a1481"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.deployment.module.network.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.deployment.module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:970354271578:security-group/sg-011d5e5012851baa9",
            "description": "Allows inbound access from the ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-011d5e5012851baa9",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04dc15163b242720c"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "my-fastapi-app-uat-ecs-security-group",
            "name_prefix": "",
            "owner_id": "970354271578",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "Environment": "uat",
              "Name": "my-fastapi-app",
              "Project": "my-fastapi-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c78183b9364a1481"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.deployment.module.network.aws_security_group.alb",
            "module.deployment.module.network.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.deployment.module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:970354271578:subnet/subnet-097f32e57d5067446",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-097f32e57d5067446",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "970354271578",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "Environment": "uat",
              "Name": "my-fastapi-app",
              "Project": "my-fastapi-app"
            },
            "vpc_id": "vpc-0c78183b9364a1481"
          },
          "dependencies": [
            "module.deployment.module.network.aws_vpc.my-vpc",
            "module.deployment.module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:970354271578:subnet/subnet-0d27da94455d99e0b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d27da94455d99e0b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "970354271578",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "Environment": "uat",
              "Name": "my-fastapi-app",
              "Project": "my-fastapi-app"
            },
            "vpc_id": "vpc-0c78183b9364a1481"
          },
          "dependencies": [
            "module.deployment.module.network.aws_vpc.my-vpc",
            "module.deployment.module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.deployment.module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:970354271578:vpc/vpc-0c78183b9364a1481",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06ce7b898e63af7db",
            "default_route_table_id": "rtb-070e08fdc1819579c",
            "default_security_group_id": "sg-0f7911a145769b31c",
            "dhcp_options_id": "dopt-3601cf5f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c78183b9364a1481",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-070e08fdc1819579c",
            "owner_id": "970354271578",
            "tags_all": {
              "Environment": "uat",
              "Name": "my-fastapi-app",
              "Project": "my-fastapi-app"
            }
          }
        }
      ]
    }
  ]
}